--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <div id="cursor-halo"></div>
     <!-- Header Design -->
     <header class="header">
-        <a href="#" class="logo">SkyDesign</a>
-        <i class="bx bx-menu" id="menu-icon"></i>
+            <i class="bx bx-menu" id="menu-icon"></i>
         <nav class="navbar">
             <a href="#home" class="active" data-section="navbar" data-value="home">// Inicio</a>
             <a href="#about" data-section="navbar" data-value="aboutNav">// Sobre mi</a>
@@ -60,16 +59,16 @@
         </a>
     </section>
 
-
-
     <!-- About Section Design -->
+     
     <section class="about" id="about">
-        <!-- <div class="about-img">
-            <img src="images/about.png" alt="">
-        </div> -->
         <div class="about-content">
-            <h2 class="heading h-translate" data-section="about" data-value="aboutTitle">Sobre </h2><span  data-section="about" data-value="me">Mí</span>
-            <p data-section="about" data-value="p1">He desarrollado mi vida profesional en ámbitos administrativos, hasta que decidí en 2020, dar un giro y empezar a estudiar algo que realmente siempre me gusto y me llamo la atención, que es la programación en general.</p>
+            <div class="title-container">
+                <h2 class="heading h-translate" data-section="about" data-value="aboutTitle">Sobre </h2><span data-section="about" data-value="me">Mí</span>
+            </div>
+            <span class="linea"></span>
+            <p class="about-intro" data-section="about" data-value="p1">Aca vas a encontrar mas información sobre mí, lo que hago, y las habilidades que actualmente manejo en terminos de programación y tecnología</p>
+
             <p data-section="about" data-value="p2">Actualmente me encuentro a 7 materias de recibirme de Técnico Universitario en Programación en la Universidad Tecnológica Nacional.</p>
             <p data-section="about" data-value="p3">Me caracterizo por ser una persona perseverante ante cualquier desafío en el ámbito laboral, tratando siempre de dar soluciones a los problemas planteados.</p>
             <a href="assets/CV-Cuenca-Leonel.pdf" class="btn cv" download="CV-Cuenca-Leonel.pdf"  data-section="about" data-value="cv">Descargar CV</a>
@@ -378,12 +377,6 @@
 
     <script src="lightbox/js/lightbox-plus-jquery.min.js"></script>
     
-    https://rapyd.cloud/blog/web-developer-portfolios-inspiration/
-
-    https://www.rammaheshwari.com/
-    https://www.codewonders.dev/
-    https://dunks1980.com/
-
 </body>
 
 </html>
