--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
             <div class="img-cont">
                 <img class="hero" src="images/2.png" alt="">
             </div>
-            <!-- <p data-section="home" data-value="description">Soy un apasionado desarrollador, con una solida experiencia en diferentes lenguajes, asi como en diferentes ámbitos. Actualmente me encuentro en busca de mi primera experiencia laboral en el mundo del desarrollo.</p> -->
             <div class="social-media">
                 <a href="https://github.com/LeoCuenca" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/leo-cuenca/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
-            <!-- <a href="#about" class="btn" data-section="home" data-value="read">Leer mas</a> -->
         </div>
         <a class="link-test" href="#about">
             <div class="scroll-down"></div>
@@ -68,9 +66,31 @@
             </div>
             <span class="linea"></span>
             <p class="about-intro" data-section="about" data-value="p1">Aca vas a encontrar mas información sobre mí, lo que hago, y las habilidades que actualmente manejo en terminos de programación y tecnología</p>
+            <div class="about-container">
+                <div class="about-text-container">
+                    <h3 class="about-title">¡Conóceme!</h3>
+                    <p class="about-text">Hola soy un desarrollador web enfocado en Frontend. Me dedico a crear y optimizar la parte visual e interactiva de sitios web, buscando siempre diseños limpios, funcionales y con una buena experiencia de usuario.</p>
+                    <p class="about-text">Disfruto transformar ideas en proyectos reales y ver cómo cada detalle hace que una web se sienta más viva. Podés ver algunos de mis trabajos en la sección Proyectos.</p>
+                    <p class="about-text">Actualmente estoy abierto a nuevas oportunidades donde pueda seguir aprendiendo, creciendo y aportando valor con mi trabajo. Si tenés una propuesta interesante, no dudes en contactarme.</p>
+                </div>
+                <div class="skills-container">
+                    <h3 class="skills-title">Mis habilidades</h3>
+                    <div class="skills">
+                        <div class="skills-skill">HTML</div>
+                        <div class="skills-skill">CSS</div>
+                        <div class="skills-skill">JavaScript</div>
+                        <div class="skills-skill">React</div>
+                        <div class="skills-skill">GIT</div>
+                        <div class="skills-skill">GitHub</div>
+                        <div class="skills-skill">Resposive Design</div>
+                        <div class="skills-skill">SEO</div>
+                    </div>
+                </div>
 
-            <p data-section="about" data-value="p2">Actualmente me encuentro a 7 materias de recibirme de Técnico Universitario en Programación en la Universidad Tecnológica Nacional.</p>
-            <p data-section="about" data-value="p3">Me caracterizo por ser una persona perseverante ante cualquier desafío en el ámbito laboral, tratando siempre de dar soluciones a los problemas planteados.</p>
+
+
+
+            </div>
             <a href="assets/CV-Cuenca-Leonel.pdf" class="btn cv" download="CV-Cuenca-Leonel.pdf"  data-section="about" data-value="cv">Descargar CV</a>
             <div class="about-skills">
                 <div class="skills-title">
@@ -79,14 +99,8 @@
                 <img src="images/html.png" class="tech" alt="html">
                 <img src="images/css.png" class="tech" alt="css">
                 <img src="images/js.png" class="tech" alt="javascript">
-                <!-- <img src="images/c.png" class="tech" alt="c">
-                <img src="images/cpp.png" class="tech" alt="cpp">
-                <img src="images/csharp.png" class="tech" alt="csharp">
-                <img src="images/vscode.png" class="tech" alt="vscode">
-                <img src="images/visualstudio.png" class="tech" alt="visualstudio"> -->
                 <img src="images/python.png" class="tech" alt="python">
                 <img src="images/git.png" class="tech" alt="git">
-                <!-- <img src="images/sql.png" class="tech" alt="sql"> -->
             </div>
             <div class="certificates-container">
                 <div class="certificates-title">
