--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             <p class="about-intro" data-section="about" data-value="p1">Aca vas a encontrar mas información sobre mí, lo que hago, y las habilidades que actualmente manejo en terminos de programación y tecnología</p>
             <div class="about-container">
                 <div class="about-text-container">
-                    <h3 class="about-title">¡Conóceme!</h3>
-                    <p class="about-text">Hola soy un desarrollador web enfocado en Frontend. Me dedico a crear y optimizar la parte visual e interactiva de sitios web, buscando siempre diseños limpios, funcionales y con una buena experiencia de usuario.</p>
+                    <h3 class="about-title">Un poco de mi historia</h3>
+                    <p class="about-text">Soy un desarrollador web enfocado en Frontend. Me dedico a crear y optimizar la parte visual e interactiva de sitios web, buscando siempre diseños limpios, funcionales y con una buena experiencia de usuario.</p>
                     <p class="about-text">Disfruto transformar ideas en proyectos reales y ver cómo cada detalle hace que una web se sienta más viva. Podés ver algunos de mis trabajos en la sección Proyectos.</p>
                     <p class="about-text">Actualmente estoy abierto a nuevas oportunidades donde pueda seguir aprendiendo, creciendo y aportando valor con mi trabajo. Si tenés una propuesta interesante, no dudes en contactarme.</p>
                 </div>
@@ -86,12 +86,7 @@
                         <div class="skills-skill">SEO</div>
                     </div>
                 </div>
-
-
-
-
             </div>
-            <a href="assets/CV-Cuenca-Leonel.pdf" class="btn cv" download="CV-Cuenca-Leonel.pdf"  data-section="about" data-value="cv">Descargar CV</a>
             <div class="about-skills">
                 <div class="skills-title">
                     <h2 data-section="about" data-value="tech">Tecnologías</h2>
@@ -110,19 +105,19 @@
                     <img src="images/full-stack-mini.jpg" alt="">
                     <h2>Full Stack Python</h2>
                     <p>Gob. de la Ciudad de Buenos Aires</p>
-                    <a href="images/full-stack.jpg" data-section="about" data-value="wide" data-lightbox = "full-stack">Ver</a>
+                    <a href="images/full-stack.jpg" class="btn" data-section="about" data-value="wide" data-lightbox = "full-stack">Ver</a>
                 </div>
                 <div class="certificates-box">
                     <img src="images/ingles-mini.png" alt="">
                     <h2>EFSET</h2>
                     <p>Nivel C2 - Proficient</p>
-                    <a href="images/ingles.jpg" data-section="about" data-value="wide" data-lightbox = "ingles">Ver</a>
+                    <a href="images/ingles.jpg" class="btn" data-section="about" data-value="wide" data-lightbox = "ingles">Ver</a>
                 </div>
                 <div class="certificates-box">
                     <img src="images/reparacion-mini.jpg" alt="">
                     <h2>Armado y Reparación de PC</h2>
                     <p>Universidad Tecnológica Nacional</p>
-                    <a href="images/reparacion.jpg" data-section="about" data-value="wide" data-lightbox = "reparacion">Ver</a>
+                    <a href="images/reparacion.jpg" class="btn" data-section="about" data-value="wide" data-lightbox = "reparacion">Ver</a>
                 </div>
             </div>
         </div>
@@ -389,6 +384,7 @@
     <!-- Custom js -->
     <script src="js/script.js"></script>
 
+    <!-- LightBox -->
     <script src="lightbox/js/lightbox-plus-jquery.min.js"></script>
     
 </body>
