--- a/index.html
+++ b/index.html
@@ -137,22 +137,27 @@
         <div class="cards-container">
             <div class="card">
                 <div class="content">
-                    <h2 class="title">Mountain View</h2>
-                    <p class="copy">Lorem ipsum, dolor sit amet consectetur adipisicing elit. In quas assumenda non aspernatur quasi inventore nostrum? Quia, nobis quibusdam, iste dolorem, commodi asperiores nulla nostrum laudantium laboriosam voluptates aliquid quas.</p>
+                    <h1 class="card-title">Landing Page</h1>
+                    <h2 class="card-subtitle">Ideal para presentar un producto, evento o servicio puntual.</h2>
+                    <p class="card-description">Diseño responsive (adaptado a PC, tablet y móvil).</p>
+                    <p class="card-description">Animaciones suaves y modernas.</p>
+                    <p class="card-description">Optimización básica para SEO.</p>
+                    <p class="card-description">Integración con redes sociales o WhatsApp.</p>
+                    <p class="card-description">Hosting y dominio opcionales.</p>
                     <button class="btn-card">View Trips</button>
                 </div>
             </div>
             <div class="card">
                 <div class="content">
                     <h2 class="title">To The Beach</h2>
-                    <p class="copy">Lorem chitecto ad praesentium! Ea iure laborum quae expedita corrupti corporis consequatur quod sequi quisquam perspiciatis, ipsum, inventore officiis ut.</p>
+                    <p class="card-description">Lorem chitecto ad praesentium! Ea iure laborum quae expedita corrupti corporis consequatur quod sequi quisquam perspiciatis, ipsum, inventore officiis ut.</p>
                     <button class="btn-card">View Trips</button>
                 </div>
             </div>
             <div class="card">
                 <div class="content">
                     <h2 class="title">Desert Destinations</h2>
-                    <p class="copy">Lorem chitecto ad praesentium! Ea iure laborum quae expedita corrupti corporis consequatur quod sequi quisquam perspiciatis, ipsum, inventore officiis ut.</p>
+                    <p class="card-description">Lorem chitecto ad praesentium! Ea iure laborum quae expedita corrupti corporis consequatur quod sequi quisquam perspiciatis, ipsum, inventore officiis ut.</p>
                     <button class="btn-card">Book Now</button>
                 </div>
             </div>
