--- a/index.html
+++ b/index.html
@@ -134,31 +134,38 @@
         <h2 class="services-title">Servicios</h2>
         <span class="linea"></span>
         <p class="services-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptatum, animi non nisi deserunt omnis porro. Sequi cum eligendi amet velit nisi. Tenetur pariatur soluta, nobis numquam necessitatibus nemo nostrum fugit molestiae. Error iusto quia adipisci sequi cumque ipsa. Voluptatibus cupiditate tempore nostrum illo quae quidem, deleniti accusantium porro laudantium.</p>
-        <div class="cards-container">
-            <div class="card">
-                <div class="content">
-                    <h1 class="card-title">Landing Page</h1>
-                    <h2 class="card-subtitle">Ideal para presentar un producto, evento o servicio puntual.</h2>
-                    <p class="card-description">Diseño responsive (adaptado a PC, tablet y móvil).</p>
-                    <p class="card-description">Animaciones suaves y modernas.</p>
-                    <p class="card-description">Optimización básica para SEO.</p>
-                    <p class="card-description">Integración con redes sociales o WhatsApp.</p>
-                    <p class="card-description">Hosting y dominio opcionales.</p>
-                    <button class="btn-card">View Trips</button>
+        <div class="card-container">
+            <div class="flip flip-vertical">
+                <div class="front">
+                    <h1 class="text-shadow">Landing Page</h1>
+                </div>
+                <div class="back">
+                    <h2 class="back-title">Landing Page</h2>
+                    <h3 class="back-subtitle">Sitio de una sola sección</h3>
+                    <p class="back-info">Una Landing Page (o página de aterrizaje) es una web de una sola sección diseñada para generar impacto y captar la atención del visitante desde el primer momento.</p>
+                    <p class="back-info">Es ideal para promocionar un producto, servicio o evento, o para crear presencia digital rápida y efectiva.</p>
+                    <p class="back-info">Cada landing que desarrollo está pensada para ser rápida, moderna y responsive, es decir, adaptada a cualquier dispositivo (celular, tablet o PC).</p>
+                    <p class="back-info">Incluye animaciones suaves, optimización para buscadores (SEO básico), y un enfoque estratégico orientado a convertir visitantes en clientes o contactos.</p>
+                    <p class="back-info">Podés usarla para una campaña publicitaria, presentación de marca o como primer paso hacia tu sitio completo.</p>
+
                 </div>
             </div>
-            <div class="card">
-                <div class="content">
-                    <h2 class="title">To The Beach</h2>
-                    <p class="card-description">Lorem chitecto ad praesentium! Ea iure laborum quae expedita corrupti corporis consequatur quod sequi quisquam perspiciatis, ipsum, inventore officiis ut.</p>
-                    <button class="btn-card">View Trips</button>
+            <div class="flip flip-vertical">
+                <div class="front">
+                    <h1 class="text-shadow">Sitio Institucional</h1>
+                </div>
+                <div class="back">
+                    <h2>Angular</h2>
+                    <p>Good tools make application development quicker and easier to maintain than if you did everything by hand..</p>
                 </div>
             </div>
-            <div class="card">
-                <div class="content">
-                    <h2 class="title">Desert Destinations</h2>
-                    <p class="card-description">Lorem chitecto ad praesentium! Ea iure laborum quae expedita corrupti corporis consequatur quod sequi quisquam perspiciatis, ipsum, inventore officiis ut.</p>
-                    <button class="btn-card">Book Now</button>
+            <div class="flip flip-vertical">
+                <div class="front">
+                    <h1 class="text-shadow">Servicios Complementarios</h1>
+                </div>
+                <div class="back">
+                    <h2>Angular</h2>
+                    <p>Good tools make application development quicker and easier to maintain than if you did everything by hand..</p>
                 </div>
             </div>
         </div>
