--- a/index.html
+++ b/index.html
@@ -141,13 +141,18 @@
                 </div>
                 <div class="back">
                     <h2 class="back-title">Landing Page</h2>
-                    <h3 class="back-subtitle">Sitio de una sola sección</h3>
-                    <p class="back-info">Una Landing Page (o página de aterrizaje) es una web de una sola sección diseñada para generar impacto y captar la atención del visitante desde el primer momento.</p>
+                    <span class="card-linea"></span>
+                    <p class="back-info">Una Landing Page es una web de una sola sección diseñada para generar impacto y captar la atención del visitante desde el primer momento.</p>
                     <p class="back-info">Es ideal para promocionar un producto, servicio o evento, o para crear presencia digital rápida y efectiva.</p>
-                    <p class="back-info">Cada landing que desarrollo está pensada para ser rápida, moderna y responsive, es decir, adaptada a cualquier dispositivo (celular, tablet o PC).</p>
-                    <p class="back-info">Incluye animaciones suaves, optimización para buscadores (SEO básico), y un enfoque estratégico orientado a convertir visitantes en clientes o contactos.</p>
-                    <p class="back-info">Podés usarla para una campaña publicitaria, presentación de marca o como primer paso hacia tu sitio completo.</p>
-
+                    <ul class="back-items">
+                        <li class="item">✔ Diseño responsive</li>
+                        <li class="item">✔ Animaciones suaves y modernas</li>
+                        <li class="item">✔ Optimización básica para SEO</li>
+                        <li class="item">✔ Integración con redes sociales o WhatsApp</li>
+                        <li class="item">✔ Hosting y dominio opcionales</li>
+                    </ul>
+                    <p class="back-info">Desde 150 USD con posibilidad de abonar en pesos al tipo de cambio del día</p>
+                    <a href="https://wa.me/541134417767?text=Funciona esto?" target="_blank" class="btn card-button">Quiero saber mas</a>
                 </div>
             </div>
             <div class="flip flip-vertical">
@@ -155,8 +160,19 @@
                     <h1 class="text-shadow">Sitio Institucional</h1>
                 </div>
                 <div class="back">
-                    <h2>Angular</h2>
-                    <p>Good tools make application development quicker and easier to maintain than if you did everything by hand..</p>
+                    <h2 class="back-title">Sitio Institucional</h2>
+                    <span class="card-linea"></span>
+                    <p class="back-info">Una Landing Page es una web de una sola sección diseñada para generar impacto y captar la atención del visitante desde el primer momento.</p>
+                    <p class="back-info">Es ideal para promocionar un producto, servicio o evento, o para crear presencia digital rápida y efectiva.</p>
+                    <ul class="back-items">
+                        <li class="item">✔ Diseño responsive</li>
+                        <li class="item">✔ Animaciones suaves y modernas</li>
+                        <li class="item">✔ Optimización básica para SEO</li>
+                        <li class="item">✔ Integración con redes sociales o WhatsApp</li>
+                        <li class="item">✔ Hosting y dominio opcionales</li>
+                    </ul>
+                    <p class="back-info">Desde 150 USD con posibilidad de abonar en pesos al tipo de cambio del día</p>
+                    <a href="https://wa.me/541134417767?text=Funciona esto?" target="_blank" class="btn card-button">Quiero saber mas</a>
                 </div>
             </div>
             <div class="flip flip-vertical">
@@ -164,8 +180,19 @@
                     <h1 class="text-shadow">Servicios Complementarios</h1>
                 </div>
                 <div class="back">
-                    <h2>Angular</h2>
-                    <p>Good tools make application development quicker and easier to maintain than if you did everything by hand..</p>
+                    <h2 class="back-title">Servicios Complementarios</h2>
+                    <span class="card-linea"></span>
+                    <p class="back-info">Una Landing Page es una web de una sola sección diseñada para generar impacto y captar la atención del visitante desde el primer momento.</p>
+                    <p class="back-info">Es ideal para promocionar un producto, servicio o evento, o para crear presencia digital rápida y efectiva.</p>
+                    <ul class="back-items">
+                        <li class="item">✔ Diseño responsive</li>
+                        <li class="item">✔ Animaciones suaves y modernas</li>
+                        <li class="item">✔ Optimización básica para SEO</li>
+                        <li class="item">✔ Integración con redes sociales o WhatsApp</li>
+                        <li class="item">✔ Hosting y dominio opcionales</li>
+                    </ul>
+                    <p class="back-info">Desde 150 USD con posibilidad de abonar en pesos al tipo de cambio del día</p>
+                    <a href="https://wa.me/541134417767?text=Funciona esto?" target="_blank" class="btn card-button">Quiero saber mas</a>
                 </div>
             </div>
         </div>
