--- a/index.html
+++ b/index.html
@@ -60,10 +60,6 @@
         <div class="home-content">
             <h1 class="home-title blur-in" data-section="home" data-value="hi">Hola, soy Leonel Cuenca</h1>
             <h3 class="home-multiple blur-in"><span class="multiple-text"></span></h3>
-            <!-- <div class="social-media">
-                <a href="https://github.com/LeoCuenca" target="_blank"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/leo-cuenca/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-            </div> -->
         </div>
         <a class="link-test" href="#about">
             <div class="scroll-down"></div>
@@ -138,10 +134,7 @@
     <section class="services" id="services">
         <h2 class="services-title">Servicios</h2>
         <span class="linea"></span>
-        <p class="services-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptatum, animi
-            non nisi deserunt omnis porro. Sequi cum eligendi amet velit nisi. Tenetur pariatur soluta, nobis numquam
-            necessitatibus nemo nostrum fugit molestiae. Error iusto quia adipisci sequi cumque ipsa. Voluptatibus
-            cupiditate tempore nostrum illo quae quidem, deleniti accusantium porro laudantium.</p>
+        <p class="services-intro">Aca vas a encontrar los servicios que ofrezco para potenciar tu presencia digital. Cada proyecto se adapta a las necesidades del cliente, combinando diseño, funcionalidad y rendimiento para lograr resultados profesionales.</p>
         <div class="card-container">
             <div class="flip flip-vertical">
                 <div class="front">
@@ -164,7 +157,7 @@
                     <p class="back-info">💰 Desde USD 150</p>
                     <p class="back-info">¿Querés una landing para tu negocio?</p>
                     <p class="back-info">¿Tenes alguna duda?</p>
-                    <a href="https://wa.me/541134417767?text=Funciona esto?" target="_blank"
+                    <a href="https://wa.me/541134417767?text=Estoy interesado en consultar por una landing page" target="_blank"
                         class="btn card-button">Hablemos por WhatsApp</a>
                 </div>
             </div>
@@ -219,39 +212,43 @@
         <div class="accordion-container">
             <div class="accordion">
                 <div class="accordion-item">
-                    <div class="accordion-header">1. Términos del servicio <span>➤</span></div>
+                    <div class="accordion-header">1. ⚙️ Modalidad de trabajo<span>+</span></div>
                     <div class="accordion-content">
-                        <p>Contenido del primer ítem...</p>
+                        <p>Cada proyecto se realiza de forma personalizada, adaptado a las necesidades y objetivos del
+                            cliente. Antes de comenzar, se define el alcance, el contenido y los plazos de entrega.</p>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <div class="accordion-header">2. Formas de pago <span>➤</span></div>
+                    <div class="accordion-header">2. 💳 Formas de pago <span>+</span></div>
                     <div class="accordion-content">
-                        <p>Contenido del segundo ítem...</p>
+                        <p>El trabajo se realiza bajo la modalidad 50% por adelantado y 50% al finalizar el proyecto,
+                            antes de la publicación o entrega de los archivos finales.</p>
+                        <p>Los pagos pueden realizarse en pesos argentinos (ARS) al tipo de cambio del día, o en dólares
+                            (USD) mediante los medios acordados (Transferencia / Mercado Pago)</p>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <div class="accordion-header">3. Política de privacidad <span>➤</span></div>
+                    <div class="accordion-header">3. 🛠️ Revisión y ajustes<span>+</span></div>
                     <div class="accordion-content">
-                        <p>Contenido del tercer ítem...</p>
+                        <p>Se incluyen una o dos rondas de ajustes menores (según el tipo de servicio) una vez
+                            presentado el diseño o la versión funcional del sitio. Cambios fuera del alcance inicial
+                            pueden presupuestarse aparte.</p>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <div class="accordion-header">4. Garantía del servicio <span>➤</span></div>
+                    <div class="accordion-header">4. 🌐 Hosting y dominio<span>+</span></div>
                     <div class="accordion-content">
-                        <p>Contenido del cuarto ítem...</p>
+                        <p>El servicio de hosting y dominio puede gestionarse a través del desarrollador o directamente
+                            por el cliente. Si el hosting lo provee el desarrollador, se cobrará el costo
+                            correspondiente al plan elegido.</p>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <div class="accordion-header">5. Reembolsos y devoluciones <span>➤</span></div>
+                    <div class="accordion-header">5. 🚀 Entrega final<span>+</span></div>
                     <div class="accordion-content">
-                        <p>Contenido del quinto ítem...</p>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <div class="accordion-header">6. Contacto y soporte <span>➤</span></div>
-                    <div class="accordion-content">
-                        <p>Contenido del sexto ítem...</p>
+                        <p>La entrega final se realiza una vez abonado el total del proyecto. En caso de hosting propio
+                            del cliente, se entregan los archivos listos para subir. Si se contrata hosting
+                            administrado, el sitio se publica directamente.</p>
                     </div>
                 </div>
             </div>
