--- a/index.html
+++ b/index.html
@@ -123,6 +123,14 @@
                         <img class="skill-img" src="images/seo.png" alt="">
                         SEO
                     </div>
+                    <div class="skills-skill">
+                        <img class="skill-img" src="images/seo.png" alt="">
+                        Python
+                    </div>
+                    <div class="skills-skill">
+                        <img class="skill-img" src="images/seo.png" alt="">
+                        C#
+                    </div>
                 </div>
             </div>
         </div>
@@ -143,10 +151,8 @@
                 <div class="back">
                     <h2 class="back-title">Landing Page</h2>
                     <span class="card-linea"></span>
-                    <p class="back-info">Una Landing Page es una web de una sola sección diseñada para generar impacto y
-                        captar la atención del visitante desde el primer momento.</p>
-                    <p class="back-info">Es ideal para promocionar un producto, servicio o evento, o para crear
-                        presencia digital rápida y efectiva.</p>
+                    <p class="back-info">Una Landing Page es una web de una sola sección diseñada para generar impacto y captar la atención del visitante desde el primer momento.</p>
+                    <p class="back-info">Es ideal para promocionar un producto, servicio o evento, o para crear presencia digital rápida y efectiva.</p>
                     <ul class="back-items">
                         <li class="item">✔ Diseño responsive</li>
                         <li class="item">✔ Animaciones suaves y modernas</li>
@@ -157,8 +163,7 @@
                     <p class="back-info">💰 Desde USD 150</p>
                     <p class="back-info">¿Querés una landing para tu negocio?</p>
                     <p class="back-info">¿Tenes alguna duda?</p>
-                    <a href="https://wa.me/541134417767?text=Estoy interesado en consultar por una landing page" target="_blank"
-                        class="btn card-button">Hablemos por WhatsApp</a>
+                    <a href="https://wa.me/541134417767?text=Estoy interesado en consultar por una landing page, " target="_blank" class="btn card-button">Hablemos por WhatsApp</a>
                 </div>
             </div>
             <div class="flip flip-vertical">
@@ -168,20 +173,13 @@
                 <div class="back">
                     <h2 class="back-title">Sitio Institucional</h2>
                     <span class="card-linea"></span>
-                    <p class="back-info">Una Landing Page es una web de una sola sección diseñada para generar impacto y
-                        captar la atención del visitante desde el primer momento.</p>
-                    <p class="back-info">Es ideal para promocionar un producto, servicio o evento, o para crear
-                        presencia digital rápida y efectiva.</p>
-                    <ul class="back-items">
-                        <li class="item">✔ Diseño responsive</li>
-                        <li class="item">✔ Animaciones suaves y modernas</li>
-                        <li class="item">✔ Optimización básica para SEO</li>
-                        <li class="item">✔ Integración con redes sociales o WhatsApp</li>
-                        <li class="item">✔ Hosting y dominio opcionales</li>
-                    </ul>
-                    <p class="back-info">Desde 150 USD con posibilidad de abonar en pesos al tipo de cambio del día</p>
-                    <a href="https://wa.me/541134417767?text=Funciona esto?" target="_blank"
-                        class="btn card-button">Quiero saber mas</a>
+                    <p class="back-info">Un sitio institucional es la carta de presentación digital de tu marca o emprendimiento.</p>
+                    <p class="back-info">Diseño sitios modernos, claros y totalmente adaptables, pensados para reflejar tu identidad profesional, transmitir confianza y destacar lo mejor de tu propuesta.</p>
+                    <p class="back-info">Cada proyecto incluye un diseño personalizado (sin plantillas prediseñadas), optimización SEO básica, formularios funcionales y asistencia con dominio y hosting para dejar tu sitio 100% online, visible y listo para crecer.</p>
+                    <p class="back-info">💰 Desde USD 250</p>
+                    <p class="back-info">¿Querés mejorar la presencia digital de tu marca?</p>
+                    <p class="back-info">Escribime y te asesoro sin compromiso</p>
+                    <a href="https://wa.me/541134417767?text=Funciona esto?" target="_blank" class="btn card-button">Hablemos por WhatsApp</a>
                 </div>
             </div>
             <div class="flip flip-vertical">
@@ -190,26 +188,21 @@
                 </div>
                 <div class="back">
                     <h2 class="back-title">Servicios Complementarios</h2>
+                    <h2 class="back-title">Mantenimiento Web</h2>
                     <span class="card-linea"></span>
-                    <p class="back-info">Una Landing Page es una web de una sola sección diseñada para generar impacto y
-                        captar la atención del visitante desde el primer momento.</p>
-                    <p class="back-info">Es ideal para promocionar un producto, servicio o evento, o para crear
-                        presencia digital rápida y efectiva.</p>
-                    <ul class="back-items">
-                        <li class="item">✔ Diseño responsive</li>
-                        <li class="item">✔ Animaciones suaves y modernas</li>
-                        <li class="item">✔ Optimización básica para SEO</li>
-                        <li class="item">✔ Integración con redes sociales o WhatsApp</li>
-                        <li class="item">✔ Hosting y dominio opcionales</li>
-                    </ul>
-                    <p class="back-info">Desde 150 USD con posibilidad de abonar en pesos al tipo de cambio del día</p>
-                    <a href="https://wa.me/541134417767?text=Funciona esto?" target="_blank"
-                        class="btn card-button">Quiero saber mas</a>
+                    <p class="back-info">Ofrezco mantenimiento, actualización de contenido, rediseño de sitios antiguos, optimización de velocidad, integración con formularios, y conexión con herramientas como Google Analytics o redes sociales.</p>
+                    <p class="back-info">Pensado para quienes ya tienen un sitio pero quieren mejorarlo o mantenerlo actualizado sin preocuparse por lo técnico.</p>
+                    <p class="back-info">💰 Desde USD 40 por servicio puntual</p>
+                    <p class="back-info">¿Queres mejorar tu web?</p>
+                    <p class="back-info">Contame qué necesitás y te asesoro sin compromiso.</p>
+                    <a href="https://wa.me/541134417767?text=Funciona esto?" target="_blank" class="btn card-button">Hablemos por WhatsApp</a>
                 </div>
             </div>
         </div>
 
         <div class="accordion-container">
+            <h3 class="accordion-title">Cómo trabajo</h3>
+            <p class="accordion-intro">En esta parte te cuento cómo organizo cada proyecto: desde la modalidad de trabajo y las formas de pago, hasta la revisión final y la entrega del sitio publicado. Busco que cada etapa sea clara y sencilla, para que el resultado refleje exactamente lo que necesitás.</p>
             <div class="accordion">
                 <div class="accordion-item">
                     <div class="accordion-header">1. ⚙️ Modalidad de trabajo<span>+</span></div>
