--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
 
         <div class="accordion-container">
             <h3 class="accordion-title">Cómo trabajo</h3>
+            <span class="accordion-line"></span>
             <p class="accordion-intro">En esta parte te cuento cómo organizo cada proyecto: desde la modalidad de trabajo y las formas de pago, hasta la revisión final y la entrega del sitio publicado. Busco que cada etapa sea clara y sencilla, para que el resultado refleje exactamente lo que necesitás.</p>
             <div class="accordion">
                 <div class="accordion-item">
