--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leonel Cuenca | Portfolio</title>
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <!-- custom css -->
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/components.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
     <link href="lightbox/css/lightbox.css" rel="stylesheet" />
-
 </head>
 
 <body>
@@ -124,11 +123,11 @@
                         SEO
                     </div>
                     <div class="skills-skill">
-                        <img class="skill-img" src="images/seo.png" alt="">
+                        <img class="skill-img" src="images/python.png" alt="">
                         Python
                     </div>
                     <div class="skills-skill">
-                        <img class="skill-img" src="images/seo.png" alt="">
+                        <img class="skill-img" src="images/csharp.png" alt="">
                         C#
                     </div>
                 </div>
